# base64

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/: base64.hpp  errors.hpp  misc.hpp
oj/: main.cpp
src/: CMakeLists.txt  base64_decode.cpp  base64_encode.cpp
tests/: CMakeLists.txt  base64_decode_test.cpp  base64_encode_test.cpp
