PROJECT(Base64 CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_CXX_STANDARD 11)

SET(ENCODE_LIB_NAME ${CMAKE_PROJECT_NAME}_encode_lib)
SET(DECODE_LIB_NAME ${CMAKE_PROJECT_NAME}_decode_lib)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(examples)

ADD_SUBDIRECTORY(lib/googletest)
