SET(SOURCES ${PROJECT_SOURCE_DIR}/examples/base64_example.cpp)
SET(BINARY ${CMAKE_PROJECT_NAME}_example)

ADD_EXECUTABLE(${BINARY})
TARGET_SOURCES(${BINARY} PRIVATE ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_encode_lib ${CMAKE_PROJECT_NAME}_decode_lib)
