SET(ENCODE_SOURCES base64_encode.cpp)
SET(ENCODE_BINARY ${ENCODE_LIB_NAME})

ADD_LIBRARY(${ENCODE_BINARY} STATIC)
TARGET_SOURCES(${ENCODE_BINARY} PRIVATE ${ENCODE_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${ENCODE_BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/include)

# ---

SET(DECODE_SOURCES base64_decode.cpp)
SET(DECODE_BINARY ${DECODE_LIB_NAME})

ADD_LIBRARY(${DECODE_BINARY} STATIC)
TARGET_SOURCES(${DECODE_BINARY} PRIVATE ${DECODE_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${DECODE_BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/include)
