SET(ENCODE_SOURCES base64_encode_test.cpp)
SET(ENCODE_BINARY ${CMAKE_PROJECT_NAME}_encode_test)

add_executable(${ENCODE_BINARY})
TARGET_SOURCES(${ENCODE_BINARY} PRIVATE ${ENCODE_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${ENCODE_BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(${ENCODE_BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_encode_lib gtest)

add_test(NAME ${ENCODE_BINARY} COMMAND ${ENCODE_BINARY})

# ---

SET(DECODE_SOURCES base64_decode_test.cpp)
SET(DECODE_BINARY ${CMAKE_PROJECT_NAME}_decode_test)

add_executable(${DECODE_BINARY})
TARGET_SOURCES(${DECODE_BINARY} PRIVATE ${DECODE_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${DECODE_BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(${DECODE_BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_decode_lib gtest)

add_test(NAME ${DECODE_BINARY} COMMAND ${DECODE_BINARY})